Fixed a scrolling issue Smoothed out the balloons Adjusted mountain range padding Made headers more visible

--- a/web/sass/constants/_colors.scss
+++ b/web/sass/constants/_colors.scss
@@ -3,7 +3,7 @@ $cloud-color: #FFFFFF;
 $mountain-color: #b77d43;
 $sand-color: #E8B47E;
 $sun-color: #FFF250;
-$fire-color: #E55E3A;
+$fire-color: #D43900;
 $green-color: #3AE55E;
 $link-color: #395C69;
 $font-color: #444;
