--- a/web/sass/structure/_generated-html.scss
+++ b/web/sass/structure/_generated-html.scss
@@ -1,6 +1,6 @@
 .generated-html {
     div {
-        @extend .cloud;
+        @include cloud;
     }
     div+div {
         margin-top: .5rem
